# toy_cpp_project

./: CMakeLists.txt  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
